Fix default page route. Fix text alignment.

--- a/src/Demo.css
+++ b/src/Demo.css
@@ -20,7 +20,6 @@ body {
 
 .bodycopy {
     color: #333;
-    font-size: 77%
 }
 
 .copyright {
@@ -42,9 +41,4 @@ body {
 
 .custom-toggler .navbar-toggler-icon {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,102,203, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
-}
-
-.navbar-toggler-icon {
-    width: 2.0em !important;
-    height: 2.0em !important;
 }
